Add AFI problem 11.15.6

--- a/Code/Algorithms/Books/AlgorithmsForInterviews/11i_programming_operating-systems.yml
+++ b/Code/Algorithms/Books/AlgorithmsForInterviews/11i_programming_operating-systems.yml
@@ -66,3 +66,12 @@ notes:
       What is a race? What can you do to prevent races?
 
       --- Aziz and Prakash; _Algorithms for Interviews_; version 1.0.0 (September 1, 2010); p 96.
+
+
+- fields:
+    Front: |
+      ## 11.15.06: Operating Systems
+
+      What is a mutex? What are semaphores? How are they implemented?
+
+      --- Aziz and Prakash; _Algorithms for Interviews_; version 1.0.0 (September 1, 2010); p 96.
