--- a/Code/Algorithms/Books/AlgorithmsForInterviews/11i_programming_operating-systems.yml
+++ b/Code/Algorithms/Books/AlgorithmsForInterviews/11i_programming_operating-systems.yml
@@ -75,3 +75,12 @@ notes:
       What is a mutex? What are semaphores? How are they implemented?
 
       --- Aziz and Prakash; _Algorithms for Interviews_; version 1.0.0 (September 1, 2010); p 96.
+
+
+- fields:
+    Front: |
+      ## 11.15.07: Operating Systems
+
+      Give examples of system calls that are not related to input-output.
+
+      --- Aziz and Prakash; _Algorithms for Interviews_; version 1.0.0 (September 1, 2010); p 96.
