Add AFI problem 11.15.10

--- a/Code/Algorithms/Books/AlgorithmsForInterviews/11i_programming_operating-systems.yml
+++ b/Code/Algorithms/Books/AlgorithmsForInterviews/11i_programming_operating-systems.yml
@@ -102,3 +102,12 @@ notes:
       What is the time lag between the system call on the client side and the receipt of the packet on the server on a local area network?
 
       --- Aziz and Prakash; _Algorithms for Interviews_; version 1.0.0 (September 1, 2010); p 96.
+
+
+- fields:
+    Front: |
+      ## 11.15.10: Operating Systems
+
+      How fast can you write a gigabyte of data from RAM to disk?
+
+      --- Aziz and Prakash; _Algorithms for Interviews_; version 1.0.0 (September 1, 2010); p 96.
