Add AFI problem 11.16.1.2

--- a/Code/Algorithms/Books/AlgorithmsForInterviews/11j1_tools_building-and-maintaining-programs.yml
+++ b/Code/Algorithms/Books/AlgorithmsForInterviews/11j1_tools_building-and-maintaining-programs.yml
@@ -29,3 +29,13 @@ notes:
       What version control system do you use?
 
       --- Aziz and Prakash; _Algorithms for Interviews_; version 1.0.0 (September 1, 2010); p 96.
+
+
+- modelName: CodingProblems
+  fields:
+    Front: |
+      ## 11.16.1.02: Tools --- building and maintaining programs
+
+      What coverage tool do you use?
+
+      --- Aziz and Prakash; _Algorithms for Interviews_; version 1.0.0 (September 1, 2010); p 96.
