Add AFI problem 11.16.1.6

--- a/Code/Algorithms/Books/AlgorithmsForInterviews/11j1_tools_building-and-maintaining-programs.yml
+++ b/Code/Algorithms/Books/AlgorithmsForInterviews/11j1_tools_building-and-maintaining-programs.yml
@@ -66,3 +66,12 @@ notes:
       What bug tracking system do you use?
 
       --- Aziz and Prakash; _Algorithms for Interviews_; version 1.0.0 (September 1, 2010); p 96.
+
+
+- fields:
+    Front: |
+      ## 11.16.1.06: Tools --- building and maintaining programs
+
+      How is branching implemented in a version control system?
+
+      --- Aziz and Prakash; _Algorithms for Interviews_; version 1.0.0 (September 1, 2010); p 96.
