Add AFI problem 11.16.2.1

--- a/Code/Algorithms/Books/AlgorithmsForInterviews/11j2_tools_shell-tools.yml
+++ b/Code/Algorithms/Books/AlgorithmsForInterviews/11j2_tools_shell-tools.yml
@@ -20,3 +20,12 @@ defaults:
 
 
 notes:
+
+
+- fields:
+    Front: |
+      ## 11.16.2.01: Tools --- shell tools
+
+      Write a regular expression for identifying social security numbers in a file.
+
+      --- Aziz and Prakash; _Algorithms for Interviews_; version 1.0.0 (September 1, 2010); p 96.
