Add AFI problem 11.16.2.2

--- a/Code/Algorithms/Books/AlgorithmsForInterviews/11j2_tools_shell-tools.yml
+++ b/Code/Algorithms/Books/AlgorithmsForInterviews/11j2_tools_shell-tools.yml
@@ -29,3 +29,12 @@ notes:
       Write a regular expression for identifying social security numbers in a file.
 
       --- Aziz and Prakash; _Algorithms for Interviews_; version 1.0.0 (September 1, 2010); p 96.
+
+
+- fields:
+    Front: |
+      ## 11.16.2.02: Tools --- shell tools
+
+      Write a command that prints out lines in a text file which contain the strings `foo` and `bar` in any order.
+
+      --- Aziz and Prakash; _Algorithms for Interviews_; version 1.0.0 (September 1, 2010); p 96.
