--- a/Code/Algorithms/Books/AlgorithmsForInterviews/11j2_tools_shell-tools.yml
+++ b/Code/Algorithms/Books/AlgorithmsForInterviews/11j2_tools_shell-tools.yml
@@ -47,3 +47,12 @@ notes:
       Write a command which replaces every occurrence of a `foo` followed by a `bar` (with possibly some other characters in between) by a `widget`.
 
       --- Aziz and Prakash; _Algorithms for Interviews_; version 1.0.0 (September 1, 2010); p 96.
+
+
+- fields:
+    Front: |
+      ## 11.16.2.04: Tools --- shell tools
+
+      Given a text file with two columns of integers, i.e., two integers encoded in ASCII per line, write a filter which sorts lines in the file by the second integer.
+
+      --- Aziz and Prakash; _Algorithms for Interviews_; version 1.0.0 (September 1, 2010); p 97.
