Add AFI problem 11.17.1

--- a/Code/Algorithms/Books/AlgorithmsForInterviews/11k_programming_systems.yml
+++ b/Code/Algorithms/Books/AlgorithmsForInterviews/11k_programming_systems.yml
@@ -19,3 +19,12 @@ defaults:
 
 
 notes:
+
+
+- fields:
+    Front: |
+      ## 11.17.01: Systems
+
+      Describe how an operating system is implemented. Specifically, describe how Linux implements processes and I/O.
+
+      --- Aziz and Prakash; _Algorithms for Interviews_; version 1.0.0 (September 1, 2010); p 98.
