--- a/Code/DSA/Books/AlgorithmsForInterviews/11b_programming_arrays.yml
+++ b/Code/DSA/Books/AlgorithmsForInterviews/11b_programming_arrays.yml
@@ -5,9 +5,9 @@ defaults:
   - Code
   - Algorithms
   - Books
-  - AlgorithmsForInterviews
-  - 11-Programming
-  - 11b-Arrays
+  - AFI-AlgorithmsForInterviews
+  - AFI-11-Programming
+  - AFI-11b-Arrays
 
   fields:
     Python: "**To-do: Python.**"
