--- a/Code/DSA/Books/AlgorithmsForInterviews/11i_programming_operating-systems.yml
+++ b/Code/DSA/Books/AlgorithmsForInterviews/11i_programming_operating-systems.yml
@@ -5,9 +5,9 @@ defaults:
   - Code
   - Algorithms
   - Books
-  - AlgorithmsForInterviews
-  - 11-Programming
-  - 11i-OperatingSystems
+  - AFI-AlgorithmsForInterviews
+  - AFI-11-Programming
+  - AFI-11i-OperatingSystems
 
   fields:
     Python: "**To-do: Python.**"
