--- a/Code/DSA/Books/AlgorithmsForInterviews/02a_sorting_general.yml
+++ b/Code/DSA/Books/AlgorithmsForInterviews/02a_sorting_general.yml
@@ -5,9 +5,9 @@ defaults:
   - Code
   - Algorithms
   - Books
-  - AlgorithmsForInterviews
-  - 02-Sorting
-  - 02a-General
+  - AFI-AlgorithmsForInterviews
+  - AFI-02-Sorting
+  - AFI-02a-General
 
   fields:
     Python: "**To-do: Python.**"
