--- a/Code/DSA/Books/AlgorithmsForInterviews/03a_meta-algorithms_dynamic-programming.yml
+++ b/Code/DSA/Books/AlgorithmsForInterviews/03a_meta-algorithms_dynamic-programming.yml
@@ -5,9 +5,9 @@ defaults:
   - Code
   - Algorithms
   - Books
-  - AlgorithmsForInterviews
-  - 03-MetaAlgorithms
-  - 03a-DynamicProgramming
+  - AFI-AlgorithmsForInterviews
+  - AFI-03-MetaAlgorithms
+  - AFI-03a-DynamicProgramming
 
   fields:
     Python: "**To-do: Python.**"
