--- a/Code/DSA/Books/AlgorithmsForInterviews/03b_meta-algorithms_greedy-algorithms.yml
+++ b/Code/DSA/Books/AlgorithmsForInterviews/03b_meta-algorithms_greedy-algorithms.yml
@@ -5,9 +5,9 @@ defaults:
   - Code
   - Algorithms
   - Books
-  - AlgorithmsForInterviews
-  - 03-MetaAlgorithms
-  - 03b-GreedyAlgorithms
+  - AFI-AlgorithmsForInterviews
+  - AFI-03-MetaAlgorithms
+  - AFI-03b-GreedyAlgorithms
 
   fields:
     Python: "**To-do: Python.**"
