--- a/Code/DSA/Books/AlgorithmsForInterviews/04a_graph-algorithms_graph-search.yml
+++ b/Code/DSA/Books/AlgorithmsForInterviews/04a_graph-algorithms_graph-search.yml
@@ -5,9 +5,9 @@ defaults:
   - Code
   - Algorithms
   - Books
-  - AlgorithmsForInterviews
-  - 04-AlgorithmsOnGraphs
-  - 04a-GraphSearch
+  - AFI-AlgorithmsForInterviews
+  - AFI-04-AlgorithmsOnGraphs
+  - AFI-04a-GraphSearch
 
   fields:
     Python: "**To-do: Python.**"
