--- a/Code/DSA/Books/AlgorithmsForInterviews/08_design-problems.yml
+++ b/Code/DSA/Books/AlgorithmsForInterviews/08_design-problems.yml
@@ -5,8 +5,8 @@ defaults:
   - Code
   - Algorithms
   - Books
-  - AlgorithmsForInterviews
-  - 08-DesignProblems
+  - AFI-AlgorithmsForInterviews
+  - AFI-08-DesignProblems
 
   fields:
     Back: "**To-do: Back.**"
