--- a/Code/DSA/Books/AlgorithmsForInterviews/10_probability.yml
+++ b/Code/DSA/Books/AlgorithmsForInterviews/10_probability.yml
@@ -5,8 +5,8 @@ defaults:
   - Code
   - Algorithms
   - Books
-  - AlgorithmsForInterviews
-  - 10-Probability
+  - AFI-AlgorithmsForInterviews
+  - AFI-10-Probability
 
   fields:
     Python: "**To-do: Python.**"
