--- a/Code/DSA/Books/AlgorithmsForInterviews/11a_programming_bit-fiddling.yml
+++ b/Code/DSA/Books/AlgorithmsForInterviews/11a_programming_bit-fiddling.yml
@@ -5,9 +5,9 @@ defaults:
   - Code
   - Algorithms
   - Books
-  - AlgorithmsForInterviews
-  - 11-Programming
-  - 11a-BitFiddling
+  - AFI-AlgorithmsForInterviews
+  - AFI-11-Programming
+  - AFI-11a-BitFiddling
 
   fields:
     Python: "**To-do: Python.**"
