--- a/Code/DSA/Books/AlgorithmsForInterviews/11c_programming_linked-lists.yml
+++ b/Code/DSA/Books/AlgorithmsForInterviews/11c_programming_linked-lists.yml
@@ -5,9 +5,9 @@ defaults:
   - Code
   - Algorithms
   - Books
-  - AlgorithmsForInterviews
-  - 11-Programming
-  - 11c-LinkedLists
+  - AFI-AlgorithmsForInterviews
+  - AFI-11-Programming
+  - AFI-11c-LinkedLists
 
   fields:
     Python: "**To-do: Python.**"
