--- a/Code/DSA/Books/AlgorithmsForInterviews/11d_programming_complexity-analysis.yml
+++ b/Code/DSA/Books/AlgorithmsForInterviews/11d_programming_complexity-analysis.yml
@@ -5,9 +5,9 @@ defaults:
   - Code
   - Algorithms
   - Books
-  - AlgorithmsForInterviews
-  - 11-Programming
-  - 11d-ComplexityAnalysis
+  - AFI-AlgorithmsForInterviews
+  - AFI-11-Programming
+  - AFI-11d-ComplexityAnalysis
 
   fields:
     Python: "**To-do: Python.**"
