--- a/Code/DSA/Books/AlgorithmsForInterviews/11f_programming_debugging-and-testing.yml
+++ b/Code/DSA/Books/AlgorithmsForInterviews/11f_programming_debugging-and-testing.yml
@@ -5,9 +5,9 @@ defaults:
   - Code
   - Algorithms
   - Books
-  - AlgorithmsForInterviews
-  - 11-Programming
-  - 11f-DebuggingAndTesting
+  - AFI-AlgorithmsForInterviews
+  - AFI-11-Programming
+  - AFI-11f-DebuggingAndTesting
 
   fields:
     Back: "**To-do: Back.**"
