--- a/Code/DSA/Books/AlgorithmsForInterviews/11g_programming_best-practices.yml
+++ b/Code/DSA/Books/AlgorithmsForInterviews/11g_programming_best-practices.yml
@@ -5,9 +5,9 @@ defaults:
   - Code
   - Algorithms
   - Books
-  - AlgorithmsForInterviews
-  - 11-Programming
-  - 11g-BestPractices
+  - AFI-AlgorithmsForInterviews
+  - AFI-11-Programming
+  - AFI-11g-BestPractices
 
   fields:
     Back: "**To-do: Back.**"
