--- a/Code/DSA/Books/AlgorithmsForInterviews/11h_programming_language-implementation.yml
+++ b/Code/DSA/Books/AlgorithmsForInterviews/11h_programming_language-implementation.yml
@@ -5,9 +5,9 @@ defaults:
   - Code
   - Algorithms
   - Books
-  - AlgorithmsForInterviews
-  - 11-Programming
-  - 11h-ProgammingLanguageImplementation
+  - AFI-AlgorithmsForInterviews
+  - AFI-11-Programming
+  - AFI-11h-ProgammingLanguageImplementation
 
   fields:
     Python: "**To-do: Python.**"
