--- a/Code/DSA/Books/AlgorithmsForInterviews/11j1_tools_building-and-maintaining-programs.yml
+++ b/Code/DSA/Books/AlgorithmsForInterviews/11j1_tools_building-and-maintaining-programs.yml
@@ -5,10 +5,10 @@ defaults:
   - Code
   - Algorithms
   - Books
-  - AlgorithmsForInterviews
-  - 11-Programming
-  - 11j-Tools
-  - 11j1-BuildingAndMaintainingPrograms
+  - AFI-AlgorithmsForInterviews
+  - AFI-11-Programming
+  - AFI-11j-Tools
+  - AFI-11j1-BuildingAndMaintainingPrograms
 
   fields:
     Python: "**To-do: Python.**"
