--- a/Code/DSA/Books/AlgorithmsForInterviews/11k_programming_systems.yml
+++ b/Code/DSA/Books/AlgorithmsForInterviews/11k_programming_systems.yml
@@ -5,9 +5,9 @@ defaults:
   - Code
   - Algorithms
   - Books
-  - AlgorithmsForInterviews
-  - 11-Programming
-  - 11k-Systems
+  - AFI-AlgorithmsForInterviews
+  - AFI-11-Programming
+  - AFI-11k-Systems
 
   fields:
     Python: "**To-do: Python.**"
