--- a/Code/DSA/brainstorms.yml
+++ b/Code/DSA/brainstorms.yml
@@ -78,3 +78,21 @@ notes:
       // String[] args;
       // Sorts.main(args);
       ```
+
+
+- fields:
+    Front: |
+      Write insertion sort.
+    Python: |
+      ```{python }
+      #
+      def insertion_sort(data):
+        for i in range(len(data)):
+          for j in reversed(range(i)):
+            if data[j] <= data[j+1]:
+              break
+            data[j+1], data[j] = data[j], data[j+1]
+        return data
+
+      print(insertion_sort([1, 9, 2, 8, 3, 7, 2, 7, 8, 6]))
+      ```
