--- a/Code/DSA/brainstorms.yml
+++ b/Code/DSA/brainstorms.yml
@@ -247,3 +247,44 @@ notes:
       // String[] args;
       // Sorts.main(args);
       ```
+
+
+- fields:
+    Front: |
+      Write mergesort.
+    Python: |
+      ```{python }
+      #
+      def merge(a, b):
+        merged = []
+        n_a, n_b = len(a), len(b)
+        i = j = 0
+        while (i < n_a) and (j < n_b): # Until a or b is exhausted, merge.
+          if a[i] < b[j]:
+            merged.append(a[i])
+            i += 1
+          else:
+            merged.append(b[j])
+            j += 1
+        # Once a or b is exhausted, append leftovers.
+        while (i < n_a):
+          merged.append(a[i])
+          i += 1
+        while (j < n_b):
+          merged.append(b[j])
+          j += 1
+        return merged
+
+
+      def mergesort(data):
+        n = len(data)
+        if n <= 1: return data # End recursion.
+        n_2 = int(n/2) # Division point.
+        return merge(
+          mergesort(data[:n_2]),
+          mergesort(data[n_2:])
+        )
+
+      data = [1, 9, 2, 8, 3, 7, 2, 7, 8, 6]
+      print(mergesort(data))
+      ```
