--- a/Code/DSA/brainstorms.yml
+++ b/Code/DSA/brainstorms.yml
@@ -288,3 +288,58 @@ notes:
       data = [1, 9, 2, 8, 3, 7, 2, 7, 8, 6]
       print(mergesort(data))
       ```
+    Java: |
+      This is a generic mergesort:
+      ```{java }
+      import java.util.ArrayList;
+      import java.util.List;
+
+      public class Sorts {
+        public static <E extends Comparable<E>> List<E> merge(List<E> a, List<E> b){
+          int na = a.size(), nb = b.size();
+          ArrayList<E> merged = new ArrayList<>(na + nb);
+          int i = 0, j = 0;
+          while((i < na) && (j < nb)){
+            if(b.get(j).compareTo(a.get(i)) < 0){
+              merged.add(b.get(j++));
+            } else {
+              merged.add(a.get(i++));
+            }
+          }
+          while(i < na){
+            merged.add(a.get(i++));
+          }
+          while(j < nb){
+            merged.add(b.get(j++));
+          }
+          return merged;
+        }
+
+        public static <E extends Comparable<E>> List<E> sort(List<E> l){
+          if(1 < l.size()){
+            int m = l.size()/2;
+            return merge(
+              sort(l.subList(0, m)),
+              sort(l.subList(m, l.size()))
+            );
+          }
+          return l;
+        }
+
+        public static void print_array(List<Integer> s){
+          for(int x: s.subList(0, s.size()-1)){
+            System.out.printf("%d, ", x);
+          }
+          System.out.printf("%d%n", s.get(s.size()-1));
+        }
+
+        public static void main(String[] args){
+          int[] data = {1, 9, 2, 8, 3, 7, 2, 7, 8, 6};
+          ArrayList<Integer> d = new ArrayList<>();
+          for(int x: data){ d.add(x); }
+          print_array(sort(d));
+        }
+      }
+      // String[] args;
+      // Sorts.main(args);
+      ```
